--- a/web/html/head.html
+++ b/web/html/head.html
@@ -15,7 +15,7 @@
     <!-- Custom styles for our template -->
     <link rel="stylesheet" href="css/template/assets/css/bootstrap-theme.css" media="screen" >
     <link rel="stylesheet" href="css/template/assets/css/main.css">
-
+    <link rel="stylesheet" href="css/template/assets/css/mycss.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="css/template/assets/js/html5shiv.js"></script>
