--- a/src/main/webapp/html/navbar.html
+++ b/src/main/webapp/html/navbar.html
@@ -18,7 +18,7 @@
                         <li class="active"><a href="sidebar-right.html">Right Sidebar</a></li>
                     </ul>
                 </li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="notif.jsp">Notification</a></li>
                 <li><a class="btn" href="logged.jsp">SE CONNECTER</a></li>
             </ul>
         </div><!--/.nav-collapse -->
