--- a/src/main/webapp/html/src.html
+++ b/src/main/webapp/html/src.html
@@ -1,8 +1,10 @@
-
-<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="assets/js/jQuery.headroom.min.js"></script>
+<!--[if lt IE 9]>
+<script src="css/template/assets/js/html5shiv.js"></script>
+<script src="css/template/assets/js/respond.min.js"></script>
+<![endif]-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="assets/js/jQuery.headroom.min.js"></script>
 <script src="assets/js/headroom.min.js"></script>
 <script src="assets/js/template.js"></script>
 <script src="js/filter.js"></script>
