--- a/src/main/webapp/html/src.html
+++ b/src/main/webapp/html/src.html
@@ -8,3 +8,4 @@
 <script src="assets/js/headroom.min.js"></script>
 <script src="assets/js/template.js"></script>
 <script src="js/filter.js"></script>
+<script src="js/apiGeo.js"></script>
