--- a/src/main/webapp/html/src.html
+++ b/src/main/webapp/html/src.html
@@ -2,10 +2,11 @@
 <script src="css/template/assets/js/html5shiv.js"></script>
 <script src="css/template/assets/js/respond.min.js"></script>
 <![endif]-->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.7.3/themes/base/jquery-ui.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+<script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="assets/js/jQuery.headroom.min.js"></script>
-<script src="assets/js/headroom.min.js"></script>
-<script src="assets/js/template.js"></script>
 <script src="js/filter.js"></script>
 <script src="js/apiGeo.js"></script>
