--- a/src/main/webapp/html/src.html
+++ b/src/main/webapp/html/src.html
@@ -10,3 +10,4 @@
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="js/filter.js"></script>
 <script src="js/apiGeo.js"></script>
+<script src="js/changeImage.js"></script>
